--- a/Guide_sign_mapping/Base.lproj/Main.storyboard
+++ b/Guide_sign_mapping/Base.lproj/Main.storyboard
@@ -53,7 +53,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="S17-Xm-t2V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-736.23188405797111" y="-2056.4732142857142"/>
+            <point key="canvasLocation" x="264" y="-2056"/>
         </scene>
         <!--Search Area View Controller-->
         <scene sceneID="wPg-Da-4nh">
@@ -101,7 +101,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gqF-TV-Ssj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="263.768115942029" y="-530.35714285714289"/>
+            <point key="canvasLocation" x="-736" y="-1289"/>
         </scene>
         <!--Select Facilities In Area View Controller-->
         <scene sceneID="saH-TP-KHt">
@@ -149,7 +149,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eg4-kP-swP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1689.8550724637682" y="-530.35714285714289"/>
+            <point key="canvasLocation" x="264" y="-1289"/>
         </scene>
         <!--Facilities View Controller-->
         <scene sceneID="SeO-1k-Tif">
@@ -163,13 +163,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </arscnView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wSC-wH-CsP">
-                                <rect key="frame" x="20" y="631" width="343" height="55"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wSC-wH-CsP">
+                                <rect key="frame" x="20" y="631" width="334" height="55"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTp-6g-3bp">
-                                        <rect key="frame" x="11" y="-72" width="320" height="199"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTp-6g-3bp">
+                                        <rect key="frame" x="11" y="-72" width="312" height="199"/>
                                         <string key="text">表示されたオブジェクトをタップすると
 詳細画面に移動します</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -179,6 +177,12 @@
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstItem="KTp-6g-3bp" firstAttribute="centerY" secondItem="wSC-wH-CsP" secondAttribute="centerY" id="AEd-Qi-NC1"/>
+                                    <constraint firstItem="KTp-6g-3bp" firstAttribute="centerX" secondItem="wSC-wH-CsP" secondAttribute="centerX" id="eXO-2F-Rpb"/>
+                                    <constraint firstItem="KTp-6g-3bp" firstAttribute="leading" secondItem="wSC-wH-CsP" secondAttribute="leading" constant="11" id="gaX-zj-DUE"/>
+                                    <constraint firstItem="KTp-6g-3bp" firstAttribute="top" secondItem="wSC-wH-CsP" secondAttribute="top" constant="-72" id="vnG-OC-QAk"/>
+                                </constraints>
                             </view>
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nhM-6K-wWB">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
@@ -189,6 +193,11 @@
                             </navigationBar>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="PLo-iA-oOR" firstAttribute="bottom" secondItem="wSC-wH-CsP" secondAttribute="bottom" constant="122" id="JPt-9d-bya"/>
+                            <constraint firstItem="wSC-wH-CsP" firstAttribute="top" secondItem="LVz-Dl-6xz" secondAttribute="top" constant="631" id="K6w-h4-xUt"/>
+                            <constraint firstItem="wSC-wH-CsP" firstAttribute="leading" secondItem="LVz-Dl-6xz" secondAttribute="leadingMargin" id="N54-S6-quz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PLo-iA-oOR"/>
                     </view>
                     <navigationItem key="navigationItem" id="O9m-dp-vee"/>
@@ -198,55 +207,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EsP-hB-UJZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2669.5652173913045" y="-530.35714285714289"/>
-        </scene>
-        <!--Select Near View Controller-->
-        <scene sceneID="2A1-vL-QQB">
-            <objects>
-                <viewController id="hAs-zQ-Q0i" customClass="SelectNearViewController" customModule="Guide_sign_mapping" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Rxj-yf-7iK">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Z7y-aG-XzP">
-                                <rect key="frame" x="0.0" y="60" width="414" height="748"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="tG4-1Y-hco">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tG4-1Y-hco" id="VdX-bX-RSw">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="hAs-zQ-Q0i" id="uk5-T9-CoS"/>
-                                    <outlet property="delegate" destination="hAs-zQ-Q0i" id="e9P-Y3-9j5"/>
-                                </connections>
-                            </tableView>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Ct-F6-A0g">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Title" id="TKB-5A-wng"/>
-                                </items>
-                            </navigationBar>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="Q1o-dc-W4u"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="AGs-8P-jMW"/>
-                    <connections>
-                        <outlet property="myTableView1" destination="Z7y-aG-XzP" id="zcw-kj-J1c"/>
-                        <segue destination="voE-MI-Rp5" kind="show" identifier="toFacilitiesVC" id="21k-N2-hIK"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="VxB-5r-xXx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="263.768115942029" y="257.8125"/>
+            <point key="canvasLocation" x="1432" y="-1289"/>
         </scene>
         <!--SelectFacilitiesVC-->
         <scene sceneID="dUc-Nk-YPB">
@@ -290,7 +251,6 @@
                         <segue destination="NaI-7h-VLb" kind="show" identifier="toPictgramsViewController" id="DrP-ok-UcE"/>
                         <segue destination="pan-J3-R78" kind="show" identifier="toSelectLandmarksVC" id="CAT-SU-fJE"/>
                         <segue destination="RTZ-3b-01M" kind="show" identifier="toSearchAreaVC" id="Nqo-l0-Qkq"/>
-                        <segue destination="hAs-zQ-Q0i" kind="show" identifier="toSelectNearVC" id="9MU-tc-44x"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7jJ-3r-V1a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -349,7 +309,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="264" y="-2056"/>
+            <point key="canvasLocation" x="1433" y="-2056"/>
         </scene>
         <!--Details View Controller-->
         <scene sceneID="fqx-yy-8aO">
@@ -425,7 +385,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pLp-gO-tmz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1691" y="-1289"/>
+            <point key="canvasLocation" x="2771" y="-1289"/>
         </scene>
         <!--Title-->
         <scene sceneID="uDZ-PD-tUm">
@@ -447,7 +407,7 @@
                                                 <state key="normal" title="←詳細画面に戻る"/>
                                             </button>
                                             <connections>
-                                                <segue destination="Avk-dA-lAf" kind="replace" splitViewControllerTargetIndex="1" id="M3V-Av-ojz"/>
+                                                <segue destination="Avk-dA-lAf" kind="push" splitViewControllerTargetIndex="1" id="M3V-Av-ojz"/>
                                             </connections>
                                         </barButtonItem>
                                     </navigationItem>
@@ -475,7 +435,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="093-Zr-xfc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2670" y="-1289"/>
+            <point key="canvasLocation" x="3751" y="-1289"/>
         </scene>
         <!--Pictgram-->
         <scene sceneID="5ga-JY-SlM">
@@ -529,11 +489,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gRq-2O-o1V" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="263.768115942029" y="-1289.0625"/>
+            <point key="canvasLocation" x="1432" y="-448"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="8b3-HJ-WVr"/>
-        <segue reference="LJi-uc-L9g"/>
     </inferredMetricsTieBreakers>
 </document>
